--- a/app-noticias/src/app/noticias-recomendadas/noticias-recomendadas.component.scss
+++ b/app-noticias/src/app/noticias-recomendadas/noticias-recomendadas.component.scss
@@ -6,7 +6,7 @@
 
 .imagen-noticia {
   background-size: cover;
-  max-height: 80%;  /* Ajusta este valor según lo que consideres adecuado */
+  max-height: 80%; 
   height: auto;
   aspect-ratio: 16/9;
 }
